@@ -1,4 +1,5 @@
 Sep 25 2002  2.5.2  More documentation updates
+                    Merged patch from Pedro to do signal levels on BSD
 Sep 24 2002  2.5.2  Tweaked network storing to not track ssids for probe, etc
                      networks.
                     Rolled cougar's patch for gpsmap tracks into gpsmap
